# foldl-exceptions

./: .gitignore  .travis.yml  cabal.project  default.nix  hie.yaml  license.txt  readme.md  stack.yaml
.github/workflows/: test.yml
configurations/: ghc-8.10.project  ghc-8.2.project  ghc-8.4.project  ghc-8.6.project  ghc-8.8.project  ghc-9.0.project  ghc-9.2.project
foldl-exceptions/: changelog.md  foldl-exceptions.cabal  readme.md
foldl-exceptions/test/: doctest.hs
foldl-exceptions/test-suite/test-foldl-exceptions/: Main.hs
