cabal-version: 3.0

name: foldl-exceptions
version: 1.0.0.0

synopsis: Exception handling with FoldM
category: Control

description:
    Adds support for tuning exception handling behavior when
    using @FoldM@ from the @foldl@ package.

homepage:    https://github.com/typeclasses/foldl-exceptions
bug-reports: https://github.com/typeclasses/foldl-exceptions/issues

author:     Chris Martin
maintainer: Chris Martin, Julie Moronuki

copyright: 2019 Mission Valley Software LLC
license: MIT
license-file: license.txt

build-type: Simple

common base
    default-language: Haskell2010
    default-extensions: ScopedTypeVariables, TypeApplications
    ghc-options: -Wall
    build-depends:
        base >=4.10 && <5
      , foldl
      , safe-exceptions

library
    import: base
    hs-source-dirs: library
    exposed-modules: Control.Foldl.Exceptions

test-suite test-foldl-exceptions
    import: base
    type: exitcode-stdio-1.0
    hs-source-dirs: test-suite/test-foldl-exceptions
    default-language: Haskell2010
    main-is: Main.hs
    build-depends:
        foldl-exceptions
      , hedgehog
